old-source/main/kotlin/me/jraynor/lualike/tree/LuaLikeParser.java
// Generated from C:/Users/james/IdeaProjects/LuaLike/src/main/kotlin/me/jraynor/lualike/tree\LuaLikeParser.g4 by ANTLR 4.12.0
package me.jraynor.lualike.tree;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuaLikeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.12.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LONGSTRING=1, COMMENT=2, LINE_COMMENT=3, OPEN_PARENTHESES=4, CLOSE_PARENTHESES=5, 
		COLON=6, FUNCTION=7, COMMA=8, VARARGS=9, NIL=10, TRUE=11, FALSE=12, DOT=13, 
		COLON_COLON=14, BREAK=15, GOTO=16, DO=17, END=18, SEMI=19, EQUALS=20, 
		WHILE=21, REPEAT=22, UNTIL=23, IF=24, THEN=25, ELSEIF=26, ELSE=27, FOR=28, 
		IN=29, LOCAL=30, RETURN=31, CONTINUE=32, OR=33, AND=34, NOT=35, COUNT=36, 
		GREATER_THAN=37, LESS_THAN=38, STR_CONCAT=39, BIT_XOR=40, NOT_EQUAL=41, 
		GREATER_THAN_OR_EQUAL=42, LESS_THAN_OR_EQUAL=43, EQUAL_EQUAL=44, PLUS=45, 
		MINUS=46, MULTIPLY=47, DIVIDE=48, MODULO=49, POW=50, BIT_AND=51, BIT_OR=52, 
		SHIFT_LEFT=53, SHIFT_RIGHT=54, OPEN_BRACE=55, CLOSE_BRACE=56, OPEN_SQUARE_BRACKET=57, 
		CLOSE_SQUARE_BRACKET=58, INT=59, HEX=60, FLOAT=61, HEX_FLOAT=62, NAME=63, 
		NORMALSTRING=64, CHARSTRING=65, WS=66, SHEBANG=67;
	public static final int
		RULE_chunk = 0, RULE_block = 1, RULE_stat = 2, RULE_attribList = 3, RULE_laststat = 4, 
		RULE_label = 5, RULE_funcname = 6, RULE_varlist = 7, RULE_namelist = 8, 
		RULE_explist = 9, RULE_exp = 10, RULE_literalexp = 11, RULE_prefixexp = 12, 
		RULE_functioncall = 13, RULE_varOrExp = 14, RULE_var = 15, RULE_varSuffix = 16, 
		RULE_nameAndArgs = 17, RULE_args = 18, RULE_functiondef = 19, RULE_funcbody = 20, 
		RULE_parlist = 21, RULE_tableconstructor = 22, RULE_fieldlist = 23, RULE_field = 24, 
		RULE_fieldsep = 25, RULE_operatorOr = 26, RULE_operatorAnd = 27, RULE_operatorComparison = 28, 
		RULE_operatorStrcat = 29, RULE_operatorAddSub = 30, RULE_operatorMulDivMod = 31, 
		RULE_operatorBitwise = 32, RULE_operatorUnary = 33, RULE_operatorPower = 34, 
		RULE_number = 35, RULE_string = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"chunk", "block", "stat", "attribList", "laststat", "label", "funcname", 
			"varlist", "namelist", "explist", "exp", "literalexp", "prefixexp", "functioncall", 
			"varOrExp", "var", "varSuffix", "nameAndArgs", "args", "functiondef", 
			"funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep", 
			"operatorOr", "operatorAnd", "operatorComparison", "operatorStrcat", 
			"operatorAddSub", "operatorMulDivMod", "operatorBitwise", "operatorUnary", 
			"operatorPower", "number", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'('", "')'", "':'", "'function'", "','", "'...'", 
			"'nil'", "'true'", "'false'", "'.'", "'::'", "'break'", "'goto'", "'do'", 
			"'end'", "';'", "'='", "'while'", "'repeat'", "'until'", "'if'", "'then'", 
			"'elseif'", "'else'", "'for'", "'in'", "'local'", "'return'", "'continue'", 
			"'or'", "'and'", "'not'", "'#'", "'>'", "'<'", "'..'", "'~'", "'~='", 
			"'>='", "'<='", "'=='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", 
			"'|'", "'<<'", "'>>'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LONGSTRING", "COMMENT", "LINE_COMMENT", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", 
			"COLON", "FUNCTION", "COMMA", "VARARGS", "NIL", "TRUE", "FALSE", "DOT", 
			"COLON_COLON", "BREAK", "GOTO", "DO", "END", "SEMI", "EQUALS", "WHILE", 
			"REPEAT", "UNTIL", "IF", "THEN", "ELSEIF", "ELSE", "FOR", "IN", "LOCAL", 
			"RETURN", "CONTINUE", "OR", "AND", "NOT", "COUNT", "GREATER_THAN", "LESS_THAN", 
			"STR_CONCAT", "BIT_XOR", "NOT_EQUAL", "GREATER_THAN_OR_EQUAL", "LESS_THAN_OR_EQUAL", 
			"EQUAL_EQUAL", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "POW", 
			"BIT_AND", "BIT_OR", "SHIFT_LEFT", "SHIFT_RIGHT", "OPEN_BRACE", "CLOSE_BRACE", 
			"OPEN_SQUARE_BRACKET", "CLOSE_SQUARE_BRACKET", "INT", "HEX", "FLOAT", 
			"HEX_FLOAT", "NAME", "NORMALSTRING", "CHARSTRING", "WS", "SHEBANG"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LuaLikeParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LuaLikeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LuaLikeParser.EOF, 0); }
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitChunk(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_chunk);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			block();
			setState(75);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public LaststatContext laststat() {
			return getRuleContext(LaststatContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(77);
					stat();
					}
					} 
				}
				setState(82);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 6442483712L) != 0)) {
				{
				setState(83);
				laststat();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(LuaLikeParser.SEMI, 0); }
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TerminalNode EQUALS() { return getToken(LuaLikeParser.EQUALS, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public LabelContext label() {
			return getRuleContext(LabelContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(LuaLikeParser.BREAK, 0); }
		public TerminalNode GOTO() { return getToken(LuaLikeParser.GOTO, 0); }
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public TerminalNode DO() { return getToken(LuaLikeParser.DO, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public TerminalNode END() { return getToken(LuaLikeParser.END, 0); }
		public TerminalNode WHILE() { return getToken(LuaLikeParser.WHILE, 0); }
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public TerminalNode REPEAT() { return getToken(LuaLikeParser.REPEAT, 0); }
		public TerminalNode UNTIL() { return getToken(LuaLikeParser.UNTIL, 0); }
		public TerminalNode IF() { return getToken(LuaLikeParser.IF, 0); }
		public List<TerminalNode> THEN() { return getTokens(LuaLikeParser.THEN); }
		public TerminalNode THEN(int i) {
			return getToken(LuaLikeParser.THEN, i);
		}
		public List<TerminalNode> ELSEIF() { return getTokens(LuaLikeParser.ELSEIF); }
		public TerminalNode ELSEIF(int i) {
			return getToken(LuaLikeParser.ELSEIF, i);
		}
		public TerminalNode ELSE() { return getToken(LuaLikeParser.ELSE, 0); }
		public TerminalNode FOR() { return getToken(LuaLikeParser.FOR, 0); }
		public List<TerminalNode> COMMA() { return getTokens(LuaLikeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LuaLikeParser.COMMA, i);
		}
		public NamelistContext namelist() {
			return getRuleContext(NamelistContext.class,0);
		}
		public TerminalNode IN() { return getToken(LuaLikeParser.IN, 0); }
		public TerminalNode FUNCTION() { return getToken(LuaLikeParser.FUNCTION, 0); }
		public FuncnameContext funcname() {
			return getRuleContext(FuncnameContext.class,0);
		}
		public FuncbodyContext funcbody() {
			return getRuleContext(FuncbodyContext.class,0);
		}
		public TerminalNode LOCAL() { return getToken(LuaLikeParser.LOCAL, 0); }
		public AttribListContext attribList() {
			return getRuleContext(AttribListContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stat);
		int _la;
		try {
			setState(168);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(87);
				varlist();
				setState(88);
				match(EQUALS);
				setState(89);
				explist();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(91);
				functioncall();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(92);
				label();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(93);
				match(BREAK);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(94);
				match(GOTO);
				setState(95);
				match(NAME);
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(96);
				match(DO);
				setState(97);
				block();
				setState(98);
				match(END);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(100);
				match(WHILE);
				setState(101);
				exp(0);
				setState(102);
				match(DO);
				setState(103);
				block();
				setState(104);
				match(END);
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(106);
				match(REPEAT);
				setState(107);
				block();
				setState(108);
				match(UNTIL);
				setState(109);
				exp(0);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(111);
				match(IF);
				setState(112);
				exp(0);
				setState(113);
				match(THEN);
				setState(114);
				block();
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==ELSEIF) {
					{
					{
					setState(115);
					match(ELSEIF);
					setState(116);
					exp(0);
					setState(117);
					match(THEN);
					setState(118);
					block();
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==ELSE) {
					{
					setState(125);
					match(ELSE);
					setState(126);
					block();
					}
				}

				setState(129);
				match(END);
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(131);
				match(FOR);
				setState(132);
				match(NAME);
				setState(133);
				match(EQUALS);
				setState(134);
				exp(0);
				setState(135);
				match(COMMA);
				setState(136);
				exp(0);
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(137);
					match(COMMA);
					setState(138);
					exp(0);
					}
				}

				setState(141);
				match(DO);
				setState(142);
				block();
				setState(143);
				match(END);
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(145);
				match(FOR);
				setState(146);
				namelist();
				setState(147);
				match(IN);
				setState(148);
				explist();
				setState(149);
				match(DO);
				setState(150);
				block();
				setState(151);
				match(END);
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(153);
				match(FUNCTION);
				setState(154);
				funcname();
				setState(155);
				funcbody();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(157);
				match(LOCAL);
				setState(158);
				match(FUNCTION);
				setState(159);
				match(NAME);
				setState(160);
				funcbody();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(161);
				match(LOCAL);
				setState(162);
				match(NAME);
				setState(163);
				attribList();
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==EQUALS) {
					{
					setState(164);
					match(EQUALS);
					setState(165);
					explist();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AttribListContext extends ParserRuleContext {
		public TerminalNode LESS_THAN() { return getToken(LuaLikeParser.LESS_THAN, 0); }
		public VarlistContext varlist() {
			return getRuleContext(VarlistContext.class,0);
		}
		public TerminalNode GREATER_THAN() { return getToken(LuaLikeParser.GREATER_THAN, 0); }
		public AttribListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attribList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitAttribList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AttribListContext attribList() throws RecognitionException {
		AttribListContext _localctx = new AttribListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_attribList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LESS_THAN) {
				{
				setState(170);
				match(LESS_THAN);
				setState(171);
				varlist();
				setState(172);
				match(GREATER_THAN);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LaststatContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(LuaLikeParser.RETURN, 0); }
		public ExplistContext explist() {
			return getRuleContext(ExplistContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(LuaLikeParser.BREAK, 0); }
		public TerminalNode CONTINUE() { return getToken(LuaLikeParser.CONTINUE, 0); }
		public TerminalNode SEMI() { return getToken(LuaLikeParser.SEMI, 0); }
		public LaststatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_laststat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitLaststat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LaststatContext laststat() throws RecognitionException {
		LaststatContext _localctx = new LaststatContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_laststat);
		int _la;
		try {
			setState(185);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				enterOuterAlt(_localctx, 1);
				{
				setState(176);
				match(RETURN);
				setState(178);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -540360383949431150L) != 0) || _la==NORMALSTRING || _la==CHARSTRING) {
					{
					setState(177);
					explist();
					}
				}

				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(180);
				match(BREAK);
				}
				break;
			case CONTINUE:
				enterOuterAlt(_localctx, 3);
				{
				setState(181);
				match(CONTINUE);
				setState(183);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI) {
					{
					setState(182);
					match(SEMI);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LabelContext extends ParserRuleContext {
		public List<TerminalNode> COLON_COLON() { return getTokens(LuaLikeParser.COLON_COLON); }
		public TerminalNode COLON_COLON(int i) {
			return getToken(LuaLikeParser.COLON_COLON, i);
		}
		public TerminalNode NAME() { return getToken(LuaLikeParser.NAME, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_label; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitLabel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LabelContext label() throws RecognitionException {
		LabelContext _localctx = new LabelContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_label);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187);
			match(COLON_COLON);
			setState(188);
			match(NAME);
			setState(189);
			match(COLON_COLON);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncnameContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(LuaLikeParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(LuaLikeParser.NAME, i);
		}
		public List<TerminalNode> DOT() { return getTokens(LuaLikeParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(LuaLikeParser.DOT, i);
		}
		public TerminalNode COLON() { return getToken(LuaLikeParser.COLON, 0); }
		public FuncnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcname; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitFuncname(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncnameContext funcname() throws RecognitionException {
		FuncnameContext _localctx = new FuncnameContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_funcname);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(191);
			match(NAME);
			setState(196);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(192);
				match(DOT);
				setState(193);
				match(NAME);
				}
				}
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(201);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COLON) {
				{
				setState(199);
				match(COLON);
				setState(200);
				match(NAME);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarlistContext extends ParserRuleContext {
		public List<VarContext> var() {
			return getRuleContexts(VarContext.class);
		}
		public VarContext var(int i) {
			return getRuleContext(VarContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LuaLikeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LuaLikeParser.COMMA, i);
		}
		public VarlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varlist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitVarlist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarlistContext varlist() throws RecognitionException {
		VarlistContext _localctx = new VarlistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_varlist);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			var();
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(204);
				match(COMMA);
				setState(205);
				var();
				}
				}
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamelistContext extends ParserRuleContext {
		public List<TerminalNode> NAME() { return getTokens(LuaLikeParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(LuaLikeParser.NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LuaLikeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LuaLikeParser.COMMA, i);
		}
		public NamelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namelist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitNamelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamelistContext namelist() throws RecognitionException {
		NamelistContext _localctx = new NamelistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_namelist);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(NAME);
			setState(216);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(212);
					match(COMMA);
					setState(213);
					match(NAME);
					}
					} 
				}
				setState(218);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExplistContext extends ParserRuleContext {
		public List<ExpContext> exp() {
			return getRuleContexts(ExpContext.class);
		}
		public ExpContext exp(int i) {
			return getRuleContext(ExpContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(LuaLikeParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(LuaLikeParser.COMMA, i);
		}
		public ExplistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explist; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LuaLikeParserVisitor ) return ((LuaLikeParserVisitor<? extends T>)visitor).visitExplist(this);
			else return visitor.visitChildren(this);
		}
	}
